[project]
name = "flux_style_adjust"
description = "StyleModelApply adds more controls"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/yichengup/Comfyui_Flux_Style_Adjust"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui_Flux_Style_Adjust"
Icon = ""
